update all application

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 AWS_REGION=ap-southeast-1
-OPENSEARCH_ENDPOINT=https://h4el4a2jw7d092zxn564.ap-southeast-1.aoss.amazonaws.com
-OPENSEARCH_INDEX=medical-documents
+BEDROCK_REGION=ap-southeast-1
+BEDROCK_MODEL_ID=amazon.nova-pro-v1:0
+INFERENCE_PROFILE_ARN=arn:aws:bedrock:ap-southeast-1:994918905615:inference-profile/apac.amazon.nova-pro-v1:0
+OPENSEARCH_ENDPOINT=https://96z46xkbur533gmw1ark.ap-southeast-1.aoss.amazonaws.com
+OPENSEARCH_INDEX=medical_docs
 S3_BUCKET=echomind-pdf-storage-sg
 DYNAMODB_CHAT_TABLE=chat-history
-DYNAMODB_DOCUMENTS_TABLE=medical-documents-metadata
