--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,12 @@ PyPDF2==3.0.1
 opensearch-py==2.4.0
 python-dotenv==1.0.0
 PyMuPDF==1.23.0
+pdfplumber>=0.7.0
 camelot-py[cv]==0.11.0
+nltk>=3.8.1
+sentence-transformers
+transformers>=4.21.0
+torch>=1.12.0
+scikit-learn>=1.1.0
+pytesseract>=0.3.10
+Pillow>=9.0.0
